# FFmpegTestDemo

./: gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/l1/ffmpegdemo/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_example_l1_ffmpegdemo_MainActivity.c  com_example_l1_ffmpegdemo_MainActivity.h
app/src/main/java/com/example/l1/ffmpegdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
